# shenlan-laser-slam-2d

./: .gitignore  .gitignore~  README.md
1/: 激光SLAM第三期助教分组结果.xlsx
1/Coulson-第一章作业/: Coulson-HW1.docx
1/Coulson-第一章作业/basicTransformStudy/: CMakeLists.txt  basic_transform_study.cpp
1/HW1/: PA1.docx
1/HW1/资料/: Linux初学者命令.md
2/Coulson-HW2/odom_calib/: CMakeLists.txt  odom_calib.cpp
2/Coulson-HW2/odom_ws/src/calib_odom/: CMakeLists.txt
2/Coulson-HW2/odom_ws/src/calib_odom/src/: Odom_Calib.cpp
2/HW2/: Coulson-HW2.docx
2/HW2/odom_calib/: odom.txt  odom_calib  odom_calib.cpp  scan_match.txt
2/HW2/odom_ws/src/calib_odom/src/: main.cpp
3/Cousolson-HW3/: HW3.docx
3/Cousolson-HW3/LaserUndistortion_ws/src/LaserUndistortion/: CMakeLists.txt  package.xml
3/Cousolson-HW3/LaserUndistortion_ws/src/LaserUndistortion/src/: LidarMotionUndistortion.cpp
3/Cousolson-HW3/LaserUndistortion_ws/src/champion_nav_msgs/: README.md
3/HW3/LaserUndistortion_ws/src/LaserUndistortion/launch/: LaserUndistortion.launch
4/HW4-Coulson/: HW4-Coulson.docx
4/HW4-Coulson/imlsMatcherProject/src/champion_nav_msgs/: README.md  install.sh
4/HW4-Coulson/imlsMatcherProject/src/csmMatcher/: package.xml  package.xml~
4/HW4-Coulson/imlsMatcherProject/src/csmMatcher/src/: main.cpp
4/HW4-Coulson/imlsMatcherProject/src/imlsMatcher/: package.xml
4/HW4-Coulson/imlsMatcherProject/src/imlsMatcher/src/: main.cpp
4/HW4/imlsMatcherProject/src/csmMatcher/: CMakeLists.txt  CMakeLists.txt~
4/HW4/imlsMatcherProject/src/csmMatcher/src/: imls_icp.cpp
5/:  总结.md
5/HW5-Coulson/: HW5-Coulson.doc
5/HW5-Coulson/src/gaussian_newton_scanmatcher/: CMakeLists.txt
5/HW5-Coulson/src/gaussian_newton_scanmatcher/include/: gaussian_newton_method.h  map.h
5/HW5-Coulson/src/gaussian_newton_scanmatcher/src/: gaussian_newton_method.cpp  main.cpp  map_cspace.cpp
5/HW5/gaussian_newton_ws/src/gaussian_newton_scanmatcher/: package.xml
5/HW5/gaussian_newton_ws/src/gaussian_newton_scanmatcher/src/: map.c
6/Coulson-HW6/: Coulson-HW6.docx
6/Coulson-HW6/LSSLAMProject/src/ls_slam/: CMakeLists.txt
6/Coulson-HW6/LSSLAMProject/src/ls_slam/src/: gaussian_newton.cpp
6/Coulson-HW6/LSSLAMProject/src/ls_slam_g2o/: CMakeLists.txt  CMakeLists.txt~
6/Coulson-HW6/LSSLAMProject/src/ls_slam_g2o/src/: gaussian_newton.cpp  readfile.cpp
6/HW6/LSSLAMProject/src/ls_slam/src/: main.cpp  main.cpp~
6/HW6/LSSLAMProject/src/ls_slam_g2o/: package.xml
7/: .~ulson-HW7.docx  Coulson-HW7.docx
7/Coulson-HW7/: Coulson-HW7.docx
7/HW7/OccupanyMappingProject/src/occupany_mapping/: CMakeLists.txt
(+10 files in other folders)
